[package]
name = "liquefy"
description = "A client for Liquidity Network hub nodes"
categories = ["network-programming"]
keywords = ["liquidity-network", "ethereum", "client"]
version = "0.1.0"
authors = ["Christian Nyumbayire"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/chritchens/liquefy"
edition = "2018"

[badges]
travis-ci = { repository = "chritchens/liquefy", branch = "master" }

[lib]
name = "libliquefy"
path = "src/lib.rs"

[[bin]]
name = "liquefy"
path = "src/main.rs"

[dependencies]
snafu = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.8", features = ["serde", "v1", "v3", "v4", "v5"] }
chrono = { version = "^0.4", features = ["serde"] }
tungstenite = "^0.9"
reqwest = { version = "^0.10", features = ["json"] }
tokio = { version = "^0.2", features = ["full"] }
