[package]
name = "liquefy"
description = "A client for Liquidity Network hub nodes"
categories = ["network-programming"]
keywords = ["liquidity-network", "ethereum", "client"]
version = "0.1.0"
authors = ["Christian Nyumbayire"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/chritchens/liquefy"
edition = "2018"

[badges]
travis-ci = { repository = "chritchens/liquefy", branch = "master" }

[lib]
name = "libliquefy"
path = "src/lib.rs"

[[bin]]
name = "liquefy"
path = "src/main.rs"

[dependencies]
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.8", features = ["serde", "v1", "v3", "v4", "v5"] }
chrono = { version = "^0.4", features = ["serde"] }
rand = "^0.7"
rand_core = "^0.5"
rug = { version = "^1.6", default-features = false, features = ["integer", "rational", "rand", "serde"] }
async-std = "^1.4"
http = "^0.2"
surf = "^1.0"
async-tungstenite = { version = "^0.3", features = ["async-std", "async-tls"] }
